--- a/package.json
+++ b/package.json
@@ -59,10 +59,13 @@
         "@sentry/electron": "^5.0.0",
         "auto-launch": "^5.0.5",
         "counterpart": "^0.18.6",
+        "electron-build-env": "^0.2.0",
         "electron-clear-data": "^1.0.5",
         "electron-store": "^10.0.0",
         "electron-window-state": "^5.0.3",
+        "matrix-seshat": "^4.0.0",
         "minimist": "^1.2.6",
+        "neon": "^2.0.0",
         "png-to-ico": "^2.1.1",
         "uuid": "^11.0.0"
     },
