--- a/.github/workflows/static_analysis.yaml
+++ b/.github/workflows/static_analysis.yaml
@@ -1,8 +1,8 @@
 name: Static Analysis
 on:
     pull_request: {}
-    push:
-        branches: [develop, master]
+#    push:
+#        branches: [develop, master]
 permissions: {} # No permissions needed
 jobs:
     ts_lint:
